--- a/src/About.css
+++ b/src/About.css
@@ -1,7 +1,7 @@
 .container_about{
     display: flex;
     width: 100%;
-    min-height: 100%;
+    height: 100vh;
     background-image: linear-gradient(79deg, #4b5f64, #519bcf 48%, #051515);
     justify-content: center;
    
