--- a/src/Profile.css
+++ b/src/Profile.css
@@ -22,8 +22,9 @@
   
   .profile-image {
     border-radius: 50%;
-    margin-right: 1rem;
-    margin-left: 8rem;
+margin-right: 1rem;
+margin-left: 0rem;
+height: 20rem;
   }
   
   .profile-text {
@@ -44,6 +45,15 @@
     color: brown;
     
   }
+  .edit-btn{
+    bottom: 1rem;
+    margin: auto 1rem 1rem 1rem;
+    padding: 0.5rem;
+    width: 16rem;
+    color: brown;
+  }
+
+  
   
   /* Responsive styles */
   
